# execution

./: .gitignore  CMakeLists.txt  executor.hpp  executor_concept.hpp  executor_forward.hpp
docs/: README.txt
environment/branch/: branch.hpp  context.hpp  types.hpp
environment/branch/asm/context/: context_cpu.asm  context_stack.asm  context_switch.asm
environment/branch/asm/tls/: tls.asm
environment/branch/example/: test.cpp
environment/branch/header/: context.hpp  types.hpp
environment/thread/: thread.hpp
include/execution/: basic_execution_branch.hpp  basic_executor.hpp  branch.hpp  execution_status.hpp  execution_type.hpp  executor.hpp  forward.hpp  trait_type.hpp
include/execution/api_export/: api_execution_syssched.h
include/execution/api_export/system_sched/: api_syssched.h
include/execution/defines/: export.h
include/execution/defines/export/: export.h
include/execution/defines/handle/: opaque_handle.h
include/execution/defines/opaque/: opaque.h
include/execution/execution_handle/: basic_execution_handle.hpp
include/execution/executor_traits/: executor_traits.hpp  executor_trigger.hpp  forward.hpp
include/execution/executor_traits/container/: queue.hpp  ringed_list.hpp  std_list.hpp
include/execution/export/io_sched/: io_sched_handle_init.h  io_sched_init.h  io_sched_manip.h
include/execution/export/thread/: thread.h
include/execution/interface/sched/: io_sched.h  sched.h
include/execution/interface/thread/: thread.h
include/execution/io_sched/: io_sched_handle_init.h  io_sched_init.h  io_sched_manip.h
include/execution/io_sched/details/: iosched_handle_init.h  iosched_init.h  iosched_manip.h  iosched_type.h
include/execution/module/: main.h
include/execution/sched/context/: context_exec.h  context_init.h  context_task.h  context_type.h
include/execution/sched/system_sched/: syssched.h  syssched_exec.h  syssched_init.h  syssched_task.h  (+1 more)
include/execution/thread/: thread_init.h  thread_manip.h
include/execution/traits/: execution_traits.hpp
include/execution/trigger/: basic_trigger.hpp  category.hpp  trigger.hpp
libs/: README.txt
module/export/: synapse-execution-module.exp  synapse-execution-module.lib
module/include/: modules.h
module/source/: modules.c
module/x64/debug/: synapse-execution-module.exp
project_files/vs2019/x64_vs2019_execution/: x64_vs2019_execution.sln
project_files/vs2022/synapse-execution/: synapse-execution.sln
project_files/vs2022/synapse-execution-sched/: synapse-execution-sched.sln
source/c/module/: main.c
source/lib/: CMakeLists.txt
source/lib/io_sched/: io_sched_handle_init.c  io_sched_init.c  io_sched_manip.c
source/lib/io_sched/details/: iosched_handle_init.c  iosched_init.c  iosched_manip.c
source/lib/thread/: thread_init.c  thread_manip.c
source/lib/thread/details/: execution_thread_init.c  execution_thread_manip.c
source/shared_lib/: CMakeLists.txt
source/shared_lib/io_sched/: io_sched_handle_init.c  io_sched_init.c  io_sched_manip.c
source/shared_lib/thread/: thread.c
source/traits/: execution_traits.cpp
(+132 files in other folders)
